--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,10 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/sophiasternberg/vcrfish
 BugReports: https://github.com/sophiasternberg/vcrfish/issues
+RoxygenNote: 7.1.1
+Imports: dplyr
+Remotes: 
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
